# CRESSim-MPM-in-denso_ros2_container-

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md
c_api/: CMakeLists.txt
c_api/include/: crmpm_c_api.h
c_api/src/: crmpm_c_api.cpp
examples/: CMakeLists.txt
examples/example_block_cutter_backend/: CMakeLists.txt  main.cpp
examples/example_block_cutter_tracking/: CMakeLists.txt  main.cpp
examples/example_c_api/: CMakeLists.txt  main.cpp
examples/example_cressim_bridge/: CMakeLists.txt  cressim_bridge.cpp  cressim_client.py  newton_cressim_loop.py  newton_pose_adapter.py  test_bridge.cpp  test_bridge.py
examples/example_cutting/: CMakeLists.txt  main.cpp
examples/example_object_creation/: CMakeLists.txt  main.cpp
include/core/: array.h  constants.h  releasable.h
include/engine/: geometry.h  gpu_data_dirty_flags.h  particle_object.h  scene.h  shape.h  simulation_factory.h
include/geometry_utils/: aabb_tree.h  sdf.h  sdf_builder.h  triangle_mesh.h  winding_number.h
include/math/: bounds3.h  mat33.h  math_helpers.h  quat.h  svd3.h  transform.h  type_aliases.h  type_punning.h  vec3.h
include/solver/: material_data.h  mpm_solver.h  particle_data.h
include/utils/: cuda_compat.h  debug_logger.h  disable_copy.h  engine_export.h  preprocessor.h
src/: CMakeLists.txt
src/core/: single_thread_manager.h
src/solver/: constitutive_models.h  cpu_mls_mpm_solver.cpp  cpu_mls_mpm_solver.h  cpu_mpm_node_base.h  cpu_pb_mpm_solver.cpp  cpu_pb_mpm_solver.h  cpu_standard_mpm_solver.cpp  cpu_standard_mpm_solver.h  gpu_mls_mpm_solver.cu  gpu_mls_mpm_solver.cuh  gpu_pb_mpm_solver.cu  gpu_pb_mpm_solver.cuh  gpu_standard_mpm_solver.cu  gpu_standard_mpm_solver.cuh  mls_mpm_algorithm.h  mpm_rigid_contact.h  mpm_solver_base.h  mpm_solver_gpu.cpp  mpm_solver_gpu.h  pb_mpm_algorithm.h  shape_functions.h  standard_mpm_algorithm.h
src/utils/: check_cuda.cuh  grow_data_block.cuh
tests/: CMakeLists.txt
tests/test_c_api/: CMakeLists.txt  main.cpp
tests/test_multi_scene/: CMakeLists.txt  main.cpp
tests/test_object_creation/: CMakeLists.txt  main.cpp
tools/: obj_loader.h  visualizer.cpp  visualizer.h
